# osggis

./: CMakeLists.txt
CMakeModules/: FindGDAL.cmake  FindTOLUA.cmake  OsgGISMacroUtils.cmake
Make/: instrules  makedirrules
data/: project.xml  world.xml
src/: CMakeLists.txt  OPEN-SLN-template.bat  highlight80.reg  osgGIS.sln
src/data/: world_script.xml
src/osgGIS/: AlignFilter  AlignFilter.cpp  Attribute  Attribute.cpp  AttributeIndex  AttributedNode  AutoResetBlock  BufferFilter  BufferFilter.cpp  BuildGeomFilter  BuildGeomFilter.cpp  BuildLabelsFilter  BuildLabelsFilter.cpp  BuildNodesFilter  BuildNodesFilter.cpp  CMakeLists.txt  ChangeShapeTypeFilter  ChangeShapeTypeFilter.cpp  ClampFilter  ClampFilter.cpp  CollectionFilter  CollectionFilter.cpp  CollectionFilterState  CollectionFilterState.cpp  CombineLinesFilter  CombineLinesFilter.cpp  Common  Compiler  Compiler.cpp  ConvexHullFilter  ConvexHullFilter.cpp  CropFilter  CropFilter.cpp  DecimateFilter  DecimateFilter.cpp  DefaultFeatureStoreFactory  DefaultFeatureStoreFactory.cpp  DefaultRasterStoreFactory  DensifyFilter  DensifyFilter.cpp  (+186 more)
src/osgGISProjects/: Build.cpp  BuildLayer  BuildLayer.cpp  BuildLayerSlice  BuildLayerSlice.cpp  BuildTarget  BuildTarget.cpp  Builder  Builder.cpp  CMakeLists.txt  Cell  CellCompiler.cpp  Common  Document  Document.cpp  Export  GriddedMapLayerCompiler  GriddedMapLayerCompiler.cpp  Map  Map.cpp  MapLayer  MapLayer.cpp  MapLayerCompiler  MapLayerCompiler.cpp  MapLayerLevelOfDetail  Project  Project.cpp  QuadKey  QuadKey.cpp  QuadTreeMapLayerCompiler  QuadTreeMapLayerCompiler.cpp  RuntimeMap  RuntimeMapLayer  RuntimeMapLayer.cpp  Serializer  Serializer.cpp  SimpleMapLayerCompiler  SimpleMapLayerCompiler.cpp  Source  Source.cpp  (+9 more)
src/osggis_build/: CMakeLists.txt  osggis_build.cpp  osggis_build.vcproj
src/osggis_drape/: CMakeLists.txt  osggis_drape.cpp
src/osggis_makelayer/: CMakeLists.txt  osggis_makelayer.cpp  osggis_makelayer.vcproj
src/osggis_mapper/: CMakeLists.txt  osggis_mapper.cpp
src/osggis_simple/: osggis_simple.cpp
src/osggis_viewer/: CMakeLists.txt  osggis_viewer.cpp
tags/T2007-09-22_PreCMake/src/: OPEN-SLN-template.bat  highlight80.reg
tags/T2007-09-22_PreCMake/src/osgGIS/: Attribute.cpp  BuildGeomFilter.cpp  BuildNodesFilter  ChangeShapeTypeFilter.cpp  ClampFilter.cpp  Common  Compiler.cpp  CropFilter.cpp  DefaultFeatureStoreFactory.cpp  DensifyFilter  DensifyFilter.cpp  DrawableFilter  Ellipsoid  ExtrudeGeomFilter  ExtrudeGeomFilter.cpp  FeatureCursorImpl  FeatureCursorImpl.cpp  FeatureFilter.cpp  FeatureLayer.cpp  GeoShape.cpp  GriddedLayerCompiler.cpp  NodeFilter.cpp  OGR_FeatureStore.cpp  OGR_Utils  (+11 more)
tags/T2007-10-12_V0.1.0/: README.txt
tags/T2007-10-12_V0.1.0/CMakeModules/: FindExpat.cmake  FindOSG.cmake
tags/T2007-10-12_V0.1.0/Make/: cygwin_wrapper_def  distrules  helprules  instexamplesrc  makedefs  makeirixdist  makepkg  makerpms
tags/T2007-10-12_V0.1.0/data/: project.xml
tags/T2007-10-12_V0.1.0/src/osgGIS/: Attribute  BuildGeomFilter.cpp  BuildNodesFilter  BuildNodesFilter.cpp  CMakeLists.txt  ClampFilter  ClampFilter.cpp  CollectionFilter  CollectionFilter.cpp  Compiler  CropFilter.cpp  DecimateFilter  DefaultFeatureStoreFactory  DensifyFilter  DensifyFilter.cpp  DrawableFilter  DrawableFilter.cpp  Ellipsoid.cpp  Export  ExtrudeGeomFilter  ExtrudeGeomFilter.cpp  Feature.cpp  FeatureFilter  FeatureFilter.cpp  FeatureLayer  FeatureStoreFactory  FilterEnv.cpp  GeoExtent.cpp  GeoPoint  GeoPoint.cpp  GeoShape.cpp  LocalizeNodesFilter  NodeFilter  NodeFilter.cpp  OGR_Feature  OGR_SpatialReference  OGR_SpatialReferenceFactory  OGR_SpatialReferenceFactory.cpp  PagedLayerCompiler2.cpp  RTree  (+14 more)
tags/T2008-07-10_V0.9.0/: CMakeLists.txt
tags/T2008-07-10_V0.9.0/CMakeModules/: FindGDAL.cmake  FindOSG.cmake  FindTOLUA.cmake
tags/T2008-07-10_V0.9.0/Make/: cygwin_plugin_def  dolink.sh  makedirdefs  makeinnosetup  tagrules
tags/T2008-07-10_V0.9.0/src/: CMakeLists.txt
tests/: CMakeLists.txt
trunk/: CMakeLists.txt  COPYRIGHT.txt  Doxyfile
trunk/CMakeModules/: FindLUA.cmake  FindOSG.cmake
trunk/Make/: dependencies  help.sh  makerules  openscenegraph.pc  versionrules
trunk/data/: world_admin.dbf
trunk/src/: CMakeLists.txt  highlight80.reg  osgGIS.sln
trunk/src/data/: world_admin.shx  world_script.xml
trunk/src/osgGIS/: AlignFilter  AlignFilter.cpp  Attribute  Attribute.cpp  AttributeIndex  AutoResetBlock  BufferFilter  BufferFilter.cpp  BuildGeomFilter  BuildGeomFilter.cpp  BuildLabelsFilter  BuildLabelsFilter.cpp  BuildNodesFilter  BuildNodesFilter.cpp  CMakeLists.txt  ChangeShapeTypeFilter  ChangeShapeTypeFilter.cpp  ClampFilter  ClampFilter.cpp  CollectionFilter  CollectionFilter.cpp  CollectionFilterState  CollectionFilterState.cpp  CombineLinesFilter  CombineLinesFilter.cpp  Common  Compiler.cpp  ConvexHullFilter  ConvexHullFilter.cpp  CropFilter  CropFilter.cpp  DecimateFilter  DecimateFilter.cpp  DefaultFeatureStoreFactory  DefaultFeatureStoreFactory.cpp  DefaultRasterStoreFactory  DefaultRasterStoreFactory.cpp  DensifyFilter  DensifyFilter.cpp  DisperseFilter  (+184 more)
trunk/src/osgGISProjects/: Build  Build.cpp  BuildLayer  BuildLayer.cpp  BuildLayerLevel  BuildLayerLevel.cpp  BuildLayerSlice  BuildLayerSlice.cpp  BuildTarget  BuildTarget.cpp  Builder  Builder.cpp  CMakeLists.txt  Cell  Cell.cpp  CellCompiler  CellCompiler.cpp  Common  Document  Document.cpp  Export  GriddedMapLayerCompiler  GriddedMapLayerCompiler.cpp  Map  Map.cpp  MapLayer  MapLayer.cpp  MapLayerCompiler  MapLayerCompiler.cpp  MapLayerCompiler2.cpp  MapLayerLevelOfDetail  MapLayerLevelOfDetail.cpp  Project  Project.cpp  QuadKey  QuadKey.cpp  QuadTreeMapLayerCompiler  QuadTreeMapLayerCompiler.cpp  RuntimeMap.cpp  Serializer  (+13 more)
trunk/src/osggis_build/: CMakeLists.txt  osggis_build.cpp
trunk/src/osggis_makelayer/: osggis_makelayer.cpp
trunk/src/osggis_mapper/: osggis_mapper.cpp
trunk/src/osggis_simple/: CMakeLists.txt  osggis_simple.cpp  osggis_simple.vcproj
trunk/src/osggis_viewer/: CMakeLists.txt  osggis_viewer.cpp
trunk/tests/encode/: CMakeLists.txt  main.cpp
(+118 files in other folders)
