
# FIXME: For OS X, need flag for Framework or dylib
IF (DYNAMIC_OSGGIS)
    ADD_DEFINITIONS(-DOSGGIS_LIBRARY -DOSGGIS_EXPORTS)
ELSE (DYNAMIC_OSGGIS)
    ADD_DEFINITIONS(-DOSGGIS_LIBRARY_STATIC -DOSGGIS_EXPORTS_STATIC)
ENDIF(DYNAMIC_OSGGIS)

SET(LIB_NAME osgGIS)

SET(LIB_PUBLIC_HEADERS
    Attribute
    AutoResetBlock
    BuildGeomFilter
    BuildLabelsFilter
    BuildNodesFilter
    ChangeShapeTypeFilter
    ClampFilter
    CollectionFilter
    CollectionFilterState
    Common
    ConvexHullFilter
    CombineLinesFilter
    Compiler
    CropFilter
    DecimateFilter
    DefaultFeatureStoreFactory
    DensifyFilter
    DrawableFilter
    DrawableFilterState
    Ellipsoid
    Export
    ExpressionEvaluator
    ExtrudeGeomFilter
    FadeHelper
    Feature
    FeatureCursorImpl
    FeatureFilter
    FeatureFilterState
    FeatureLayer
    FeatureStore
    FeatureStoreFactory
    Filter
    FilterGraph
    FilterState
    FilterEnv
    GeocentricSpatialReference
    GeoExtent
    GeoPoint
    GeoShape
    GriddedLayerCompiler
    LayerCompiler
    LineSegmentIntersector2
    LocalizeNodesFilter
    Lua_ScriptEngine
    Lua_ScriptEngine_tolua
    NodeFilter
    NodeFilterState
    OGR_Feature
    OGR_FeatureStore
    OGR_SpatialReference
    OGR_SpatialReferenceFactory
    OGR_Utils
    PagedLayerCompiler
    Property
    RandomGroupingFilter
    Registry
    RemoveHolesFilter
    Resource
    ResourceLibrary
    RTree
    RTreeSpatialIndex
    Rule
    Script
    ScriptEngine
    SelectFilter
    Session
    SkinResource
    SimpleFeature
    SimpleLayerCompiler
    SimpleSpatialIndex
    SmartReadCallback
    SpatialIndex
    SpatialReference
    SpatialReferenceBase
    SpatialReferenceFactory
    StubSpatialIndex
    SuperFeature
    Tags
    Task
    TaskManager
    TerrainUtils
    TransformFilter
    Utils
    WriteTextFilter
)

ADD_LIBRARY(${LIB_NAME}
    ${OSGGIS_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    Attribute.cpp
    BuildGeomFilter.cpp
    BuildLabelsFilter.cpp
    BuildNodesFilter.cpp
    ChangeShapeTypeFilter.cpp
    ClampFilter.cpp
    CollectionFilter.cpp
    CollectionFilterState.cpp
    CombineLinesFilter.cpp
    Compiler.cpp
    ConvexHullFilter.cpp
    CropFilter.cpp
    DecimateFilter.cpp
    DefaultFeatureStoreFactory.cpp
    DensifyFilter.cpp
    DrawableFilter.cpp
    DrawableFilterState.cpp
    Ellipsoid.cpp
    ExpressionEvaluator.cpp
    ExtrudeGeomFilter.cpp
    FadeHelper.cpp
    Feature.cpp
    FeatureCursorImpl.cpp
    FeatureFilter.cpp
    FeatureFilterState.cpp
    FeatureLayer.cpp
    Filter.cpp
    FilterGraph.cpp
    FilterState.cpp
    FilterEnv.cpp
    GeocentricSpatialReference.cpp
    GeoExtent.cpp
    GeoPoint.cpp
    GeoShape.cpp
    GriddedLayerCompiler.cpp
    LayerCompiler.cpp
    LineSegmentIntersector2.cpp
    LocalizeNodesFilter.cpp
    Lua_ScriptEngine.cpp
    Lua_ScriptEngine_tolua.cpp
    NodeFilter.cpp
    NodeFilterState.cpp
    OGR_Feature.cpp
    OGR_FeatureStore.cpp
    OGR_SpatialReference.cpp
    OGR_SpatialReferenceFactory.cpp
    OGR_Utils.cpp
    PagedLayerCompiler.cpp
    Property.cpp
    RandomGroupingFilter.cpp
    Registry.cpp
    RemoveHolesFilter.cpp
    Resource.cpp
    ResourceLibrary.cpp
    RTreeSpatialIndex.cpp
    Rule.cpp
    Script.cpp
    SelectFilter.cpp
    Session.cpp
    SkinResource.cpp
    SimpleFeature.cpp
    SimpleLayerCompiler.cpp
    SimpleSpatialIndex.cpp
    SmartReadCallback.cpp
    SpatialReference.cpp
    Task.cpp
    TaskManager.cpp
    TerrainUtils.cpp
    TransformFilter.cpp
    Utils.cpp
    WriteTextFilter.cpp
)

LINK_EXTERNAL(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT}    ${MATH_LIBRARY})
LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OSGSIM_LIBRARY OSGTEXT_LIBRARY OPENTHREADS_LIBRARY GDAL_LIBRARY LUA_LIBRARY TOLUA_LIBRARY)
LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )

INCLUDE(ModuleInstall OPTIONAL)
